# raikiri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/raikiri/: Cargo.toml
crates/raikiri-wasi-sdk/: Cargo.toml
crates/raikiri-wasi-sdk/src/: lib.rs
crates/raikiri/src/: lib.rs  main.rs  server.rs  types.rs
crates/raikiri/src/adapters/: component_imports.rs  component_invoke.rs  component_registry.rs  component_storage.rs  conf_file.rs  context.rs  mod.rs  wasi_http_view.rs  wasi_view.rs
crates/raikiri/src/adapters/db/: mod.rs  postgresql.rs
crates/raikiri/src/domain/: mod.rs  raikiri_env.rs  raikiri_env_component.rs  raikiri_env_db.rs  raikiri_env_fs.rs  raikiri_env_invoke.rs  raikiri_env_secrets.rs  raikiri_env_server.rs  raikiri_request.rs
crates/raikiri/src/sdk/: create_api_gateway.rs  shared.rs  upload_component.rs
crates/raikiri/wit/: deps.toml
crates/test-programs/: Cargo.toml  build.rs
crates/test-programs/artifacts/: Cargo.toml  build.rs
crates/test-programs/artifacts/src/: lib.rs
crates/test-programs/src/: lib.rs
crates/wasi-preview1-component-adapter/: Cargo.toml  build.rs
crates/wasi-preview1-component-adapter/byte-array-literals/: Cargo.toml
crates/wasi-preview1-component-adapter/verify/: Cargo.toml
src/: lib.rs  main.rs  server.rs  types.rs
src/adapters/: cache.rs  component_events.rs  component_imports.rs  component_invoke.rs  component_registry.rs  component_storage.rs  conf_file.rs  context.rs  mod.rs  module_events.rs  module_imports.rs  module_invoke.rs  module_storage.rs  raikirifs.rs  secret_storage.rs  setup_app_dir.rs  wasi_http_linker.rs  wasi_http_view.rs  wasi_view.rs  wit.rs
src/domain/: mod.rs  raikiri_env.rs  raikiri_env_component.rs  raikiri_env_fs.rs  raikiri_env_invoke.rs  raikiri_env_secrets.rs  raikiri_env_server.rs  raikiri_request.rs
src/sdk/: create_api_gateway.rs  mod.rs  shared.rs  upload_component.rs
wit/: world.wit
