[workspace]
resolver = "2"
members = [
  "crates/raikiri",
  "crates/test-programs",
  "crates/wasi-preview1-component-adapter",
  "crates/wasi-preview1-component-adapter/verify",
]

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
test-programs-artifacts = { path = "crates/test-programs/artifacts" }
byte-array-literals = { path = "crates/wasi-preview1-component-adapter/byte-array-literals" }
wit-bindgen-rust-macro = { version = "0.41.0", default-features = false }
object = { version = "0.36.5", default-features = false, features = ['read_core', 'elf'] }
bitflags = "2.0"
wasm-encoder = "0.228.0"
anyhow = { version = "1.0.93", default-features = false }
wasmparser = { version = "0.228.0", default-features = false, features = ['simd'] }
wat = "1.228.0"
